--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "ip": "^2.0.1",
     "js-sha512": "^0.9.0",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.7",
     "pg": "^8.11.5",
     "pg-format": "^1.0.4",
